reconfigured to java 11