@@ -1,6 +1,7 @@
 package mate.academy.spring.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import mate.academy.spring.model.dto.CinemaHallRequestDto;
 import mate.academy.spring.model.dto.CinemaHallResponseDto;
 import mate.academy.spring.service.CinemaHallService;
@@ -33,6 +34,7 @@ public class CinemaHallController {
 
     @GetMapping
     public List<CinemaHallResponseDto> getAll() {
-        return cinemaHallService.getAll().stream().map(cinemaHallDtoMapper::toDto).toList();
+        return cinemaHallService.getAll().stream().map(cinemaHallDtoMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
